# microservices-simulator

./: .dockerignore  .gitignore  2026-05-27-test-review-part-a-plan.md  2026-06-02-intra-invariant-service-test-split-plan.md  AGENTS.md  CLAUDE.md  CONTEXT-MAP.md  EFFORT.md  README.md  TODO.md  copy_tests_to_answers.sh  docker-compose-parallel.yml  docker-compose.yml  log_viewer.py  mkdocs.verifier.yml  otel-collector-config.yaml  start_parallel.sh  stop_parallel.sh  user-guide-review.md
.run/: AnswerServiceApplication Sagas.run.xml  (+100 more)
performance-analysis/: Dockerfile  README.md  docker-compose-parallel-training.yml  otel-collector-config.yaml  pyproject.toml  requirements.txt  server.py  start_parallel.sh  stop_parallel.sh  trace_collector.py
performance-analysis/src/: server.py
performance-analysis/src/agent/: agent.py  simulator_evaluator.py
performance-analysis/src/agents/: simulation_runner.py  train.py
performance-analysis/src/agents/rl/: ppo_agent.py  ppo_config.yaml  test_env.py
performance-analysis/src/initial_config/: baseline_data.py  baseline_data.sql  config.json
performance-analysis/src/simulator_tools/: config_utils.py  db_utils.py  h2_utils.py  simulator_utils.py
performance-analysis/src/trace_collection/: trace_collector.py
performance-analysis/src/workloads/: base_wl.py  change_of_year_wl.py  exam_wl.py  semester_start_wl.py  steady_wl.py  tournament_period_wl.py  workload.py  workload_class.py
performance-analysis/src/workloads/quizzes/: base_wl.py  exam_wl.py  semester_start_wl.py  steady_wl.py  tournament_period_wl.py  user_wl.py
(+6810 files in other folders)
