[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "performance-analysis"
version = "0.1.0"
description = "Microservices Performance Analysis and RL Agent"
dependencies = [
    "grpcio",
    "opentelemetry-proto",
    "protobuf",
    "gymnasium",
    "numpy",
    "requests",
    "psycopg2-binary"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]